# goldminer

./: README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: request-blogging.md
.github/workflows/: a1.yml  a2.yml  a3.yml  test.yml  test_issue.yml
src/: bithumb.py  main.py  persona.py
src/characters/Belty/: CHARACTER.yml
src/goldminer/automations/: a1.py  a2.py  a3.py  knowledge.py
src/goldminer/characters/Belty/: CHARACTER.yml
src/goldminer/tasks/: blogger.py  google_trans.py  naver.py  tistory.py  wikipedia.py
