[project]
name = "goldminer"
version = "0.0.1"
description = "Generative Agent for Search & Blog"
license = {file = "LICENSE.txt"}
readme = "README.md"

requires-python = ">=3.7"

authors = [
  {name = "Choonho Son", email = "choonho.son@cloudforet.io" }
]

dependencies = [
  'requests',
  'google-api-python-client'
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
